fix: update navbar design  - Remove Home button  - Remove Flex layout and make navbar group right aligned.

--- a/components/Navbar/Navbar.module.css
+++ b/components/Navbar/Navbar.module.css
@@ -164,18 +164,3 @@
     color: #ebc886;
   }
 }
-
-/* Navbar rules for Tablet Mode */
-@media only screen and ( max-width: 898px) {
-  .list__items {
-    margin: 0;
-  }
-  .nav__bar {
-    width: 100%;
-    padding-left: 1rem;
-  }
-  .nav__items {
-    justify-content: space-between;
-    gap: 0px;
-  }
-}
